--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div class="m-nav-menu">
-                <button mobile-modal-open type="button" class="m-button">
+                <button id="m-modal-open" type="button" class="m-button">
                     <svg class="m-button__icon" width="40px" height="40px">
                         <use href="./images/icons.svg#mobile-menu"></use>
                     </svg>
@@ -31,9 +31,9 @@
 
         <!-- Модальное окно mobile контактов -->
 
-        <div mobile-modal class="m-backdrop is-hidden">
+        <div id="m-modal" class="m-backdrop is-hidden">
             <nav class="m-nav">
-                <button mobile-modal-close type="button" class="m-button-close">
+                <button id="m-modal-close" type="button" class="m-button-close">
                     <svg class="m-button-close__logo" width="18px" height="18px">
                         <use href="./images/icons.svg#modal-close-button"></use>
                     </svg>
