--- a/index1.html
+++ b/index1.html
@@ -11,14 +11,13 @@
 <body>
     <!--Шапка сайта-->
     <header class="page-header">
-        <div class="header_conteiner">
-            <nav class="nav">
-                <div class="logo logo--headered">
+        <div class="header_conteiner"><div class="logo logo--headered">
                     <a href="./index.html" class="logo__link">
                         <span class="logo--blue-part">Web</span>
                         <span class="logo--black-part">Studio</span>
                     </a>
                 </div>
+            <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="./index.html" class="nav__link nav__link--current">Студия</a>
                     </li>
