--- a/portfolio.html
+++ b/portfolio.html
@@ -341,7 +341,7 @@
         </div>
     </footer>
     
-    <script src="./js/m-modal.js">
+    <script src="./js/mobile-menu.js">
     </script>
 </body>
 
