--- a/index.html
+++ b/index.html
@@ -56,19 +56,30 @@
             </div>
             <div class="m-nav-menu">
                 <button id="m-modal-open" type="button" class="m-button">
-                    <svg class="m-button__icon" width="40px" height="40px">
+                    <svg 
+                    class="m-button__icon" 
+                    width="40px" 
+                    height="40px"
+                    aria-label="Кнопка открытия мобильного меню">
                         <use href="./images/icons.svg#mobile-menu"></use>
                     </svg>
                 </button>
             </div>
         </div>
 
-        <!-- Модальное окно mobile контактов -->
+        <!-- Модальное окно мобильного меню -->
 
         <div id="m-modal" class="m-backdrop is-hidden">
             <nav class="m-nav">
-                <button id="m-modal-close"  type="button" class="m-button-close">
-                    <svg class="m-button-close__logo" width="18px" height="18px">
+                <button 
+                id="m-modal-close"  
+                type="button" 
+                class="m-button-close">
+                    <svg 
+                    class="m-button-close__logo" 
+                    width="18px" 
+                    height="18px"
+                    aria-label="Кнопка закрытия мобильного меню">
                         <use href="./images/icons.svg#modal-close-button"></use>
                     </svg>
                 </button>
