problem with card

--- a/index.html
+++ b/index.html
@@ -196,22 +196,37 @@
                     <ul class="production__list">
                         <li class="production__item">
                             <div class="production__wrapper">
-                                <img src="./images/backend-opt.jpg" alt="десктопные приложения" class="production__image"
-                                    width="370">
+                                <img 
+                                srcset="./images/backend-opt370@1x.jpg 370w, ./images/backend-opt740@2x.jpg 740w"
+                                sizes="370px"
+                                src="./images/backend-opt370@1x.jpg" 
+                                alt="десктопные приложения" 
+                                class="production__image"
+                                width="370">
                                 <p class="production__description">Десктопные приложения</p>
                             </div>
                         </li>
                         <li class="production__item">
                             <div class="production__wrapper">
-                                <img src="./images/frontend-opt.jpg" alt="мобильные приложения" class="production__image"
-                                    width="370">
+                                <img 
+                                srcset="./images/frontend-opt370@1x.jpg 370w, ./images/frontend-opt740@2x.jpg 740w"
+                                sizes="370px"
+                                src="./images/frontend-opt370@1x.jpg" 
+                                alt="мобильные приложения" 
+                                class="production__image"
+                                width="370">
                                 <p class="production__description">Мобильные приложения</p>
                             </div>
                         </li>
                         <li class="production__item">
                             <div class="production__wrapper">
-                                <img src="./images/design-opt.jpg" alt="дизайн сайтов" class="production__image"
-                                    width="370">
+                                <img 
+                                srcset="./images/design-opt370@1x.jpg 370w, ./images/design-opt740@2x.jpg 740w"
+                                sizes="370px"
+                                src="./images/design-opt370@1x.jpg" 
+                                alt="дизайн сайтов" 
+                                class="production__image"
+                                width="370">
                                 <p class="production__description">Дизайнерские решения</p>
                             </div>
                         </li>
@@ -224,7 +239,13 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team-member">
-                        <img src="./images/team-card1-opt.jpg" alt="фото Игоря Демьяненко" class="team-member__img">
+                        <img 
+                        srcset="./images/d.team-card1-1X.jpg 270w, ./images/d.team-card1-2X.jpg 540w, ./images/t.team-card1@1x270.jpg 350w, ./images/t.team-card1@2x540.jpg 700w, ./images/m.team-card1-360-1X.jpg 450w, ./images/m.team-card1-720-2X.jpg 900w"
+                        sizes="270px"
+                        src="./images/d.team-card1-1X.jpg" 
+                        alt="фото Игоря Демьяненко" 
+                        class="team-member__img"
+                        width="270">
                         <h3 class="team-member__name">Игорь Демьяненко</h3>
                         <p lang="en" class="team-member__position">Product Designer</p>
                         <ul class="social-list">
@@ -259,7 +280,13 @@
                         </ul>
                     </li>
                     <li class="team-member">
-                        <img src="./images/team-card2-opt.jpg" alt="фото Ольги Репиной" class="team-member__img">
+                        <img 
+                        srcset="./images/d.team-card2-1X.jpg 270w, ./images/d.team-card2-2X.jpg 540w, ./images/t.team-card2@1x270.jpg 350w, ./images/t.team-card2@2x540.jpg 700w, ./images/m.team-card2-360-1X.jpg 450w, ./images/m.team-card2-720-2X.jpg 900w"
+                        sizes="270px"
+                        src="./images/d.team-card2-1X.jpg" 
+                        alt="фото Ольги Репиной" 
+                        class="team-member__img"
+                        width="270">
                         <h3 class="team-member__name">Ольга Репина</h3>
                         <p lang="en" class="team-member__position">Frontend Developer</p>
                         <ul class="social-list">
@@ -294,7 +321,13 @@
                         </ul>
                     </li>
                     <li class="team-member">
-                        <img src="./images/team-card3-opt.jpg" alt="фото Николая Тарасова" class="team-member__img">
+                        <img 
+                        srcset="./images/d.team-card3-1X.jpg 270w, ./images/d.team-card3-2X.jpg 540w, ./images/t.team-card3@1x270.jpg 350w, ./images/t.team-card3@2x540.jpg 700w, ./images/m.team-card3-360-1X.jpg 450w, ./images/m.team-card3-720-2X.jpg 900w"
+                        sizes="270px"
+                        src="./images/d.team-card3-1X.jpg" 
+                        alt="фото Николая Тарасова" 
+                        class="team-member__img"
+                        width="270">
                         <h3 class="team-member__name">Николай Тарасов</h3>
                         <p lang="en" class="team-member__position">Marketing</p>
                         <ul class="social-list">
@@ -329,7 +362,13 @@
                         </ul>
                     </li>
                     <li class="team-member">
-                        <img src="./images/team-card4-opt.jpg" alt="фото Михаила Урмакова" class="team-member__img">
+                        <img 
+                        srcset="./images/d.team-card4-1X.jpg 270w, ./images/d.team-card4-2X.jpg 540w, ./images/t.team-card4@1x270.jpg 350w, ./images/t.team-card4@2x540.jpg 700w, ./images/m.team-card4-360-1X.jpg 450w, ./images/m.team-card4-720-2X.jpg 900w"
+                        sizes="270px"
+                        src="./images/d.team-card4-1X.jpg" 
+                        alt="фото Михаила Урмакова" 
+                        class="team-member__img"
+                        width="270">
                         <h3 class="team-member__name">Михаил Ермаков</h3>
                         <p lang="en" class="team-member__position">UI Designer</p>
                         <ul class="social-list">
